# matel

./: COMPILING.md  LICENSE  Makefile  README.md  STYLE.md  matel.1  matel.cabal  matel.hs  matelcli.1
Backend/: BasicStuff.hs
app/: Colour.hs  GetAuth.hs  Plegg.hs  TUI.hs  matel.hs  matelcli.hs
src/: Colour.hs  Config.hs  GUI.hs  TUI.hs  matel.hs  matelcli.hs
src/Metal/: .Auth.hs.swp  Auth.hs  Base.hs  Community.hs  CryptoMess.hs  Data.hs  Default.hs  Encrypted.hs  Event.hs  EventCommonFields.hs  FavoriteNoise.hs  MatrixAPI.hs  OftenUsedFunctions.hs  Room.hs  Space.hs  Types.hs  User.hs
src/Metal/MatrixAPI/: HighLevel.hs  LowLevel.hs
src/Metal/MatrixAPI/LowLevel/: Crypto.hs  Events.hs  FetchEvents.hs  GenerateAuth.hs  GetRoomInformation.hs  HTTP.hs  RecordCombination.hs  ResponseToWhatever.hs  Send.hs  Types.hs
src/Metal/MatrixAPI/LowLevel/Crypto/: Generic.hs  Megolm.hs  Miscellaneous.hs  Olm.hs
src/Metal/MatrixAPI/LowLevel/Send/: Text.hs
src/Metal/Messages/: Encrypted.hs  EncryptedFile.hs  FileInfo.hs  Standard.hs  ThumbnailInfo.hs  VideoInfo.hs
testes/: crypto.hs
testes/core/: fromjson.hs  oeuf.hs  voorhees.hs
testes/core/fromjson/: encrypted.hs
testes/matelcli/: grab-unencrypted-messages.hs  send-unencrypted-message.hs  sync.hs
