cabal-version: 2.4
name:          matel
version:       0.1.0.6
synopsis:      TUI client for the Matrix instant messaging service.
description:   Matel is a currently incomplete Haskell-based Matrix
               client.  Matel aims to have a terminal user interface
               which is intuitive but well-documented, in addition to
               having some very readable source code.
               .
               Despite originating as a TUI-based thing, Matel _does_
               also offer a command-line interface, called "matelcli".
               .
               Additionally, as of version 0.1.0.4, Matel's underlying
               infrastructure can now be used within other projects via
               the "matel" library.
               .
               Identified bugs and similar nasties can be e-mailed to
               the maintainer such that the resulting message's header
               contains the phrase "MATEL CONTRIBUTION".  VARIK welcomes
               bug reports, even if VARIK may immediately respond to
               such bug reports by sighing or saying "God damn it".
               .
               Alternatively, men who wish to fix such bugs when such
               bugs are encountered can follow the contribution
               guidelines which are described at Matel's GitHub page,
               http:\/\/github.com\/varikvalefor\/matel.
bug-reports:   http://github.com/varikvalefor/matel/issues
license:       BSD-3-Clause
author:        Varik Valefor
maintainer:    varikvalefor@aol.com
copyright:     (c) Varik Valefor 2021.
category:      Chat
extra-source-files:
  README.md

library
  ghc-options: -O2 -haddock
  exposed-modules:
    Metal.Auth
    Metal.Space
    Metal.Room
    Metal.Community
    Metal.Base
    Metal.User
    Metal.OftenUsedFunctions
    Metal.MatrixAPI.HighLevel
    Metal.MatrixAPI.LowLevel
    Metal.Messages.Encrypted
    Metal.Messages.Standard
    Metal.Default
  other-modules:
    Metal.MatrixAPI.LowLevel.Types
    -- Metal.MatrixAPI.LowLevel.Types is a VERY low-level module which
    -- is not of DIRECT use to things which exist "outside of"
    -- Metal.MatrixAPI.LowLevel; as such, Metal.MatrixAPI.LowLevel.Types
    -- is classified as an "other module".
    Metal.MatrixAPI.LowLevel.GenerateAuth
  other-extensions:
    OverloadedStrings
    TemplateHaskell
    DeriveAnyClass
  build-depends:
    base ^>=4.14.1.0,
    bytestring,
    http-conduit,
    aeson,
    string-random,
    text
  hs-source-dirs:   src
  default-language: Haskell2010

executable matel
  main-is:          matel.hs
  ghc-options:      -haddock -threaded -O2 -dynamic
  other-modules:
    TUI,
    Colour,
    GetAuth
  build-depends:
    base ^>=4.14.1.0,
    brick,
    bytestring,
    vty,
    http-conduit,
    text,
    directory,
    matel
  hs-source-dirs:   app
  default-language: Haskell2010

executable matelcli
  main-is:          matelcli.hs
  ghc-options:      -haddock -threaded -O2 -dynamic
  other-modules:
    GetAuth
  build-depends:
    base ^>=4.14.1.0,
    bytestring,
    http-conduit,
    aeson,
    text,
    directory,
    matel
  hs-source-dirs:   app
  default-language: Haskell2010
