cabal-version: 2.4
name:          matel
version:       0.1.0.6
synopsis:      TUI client for the Matrix instant messaging service.
description:   Matel is a currently incomplete Haskell-based Matrix
               client.  Matel aims to have a terminal user interface
               which is intuitive but well-documented, in addition to
               having some very readable source code.
               .
               Despite originating as a TUI-based thing, Matel _does_
               also offer a command-line interface, called "matelcli".
               .
               Additionally, as of version 0.1.0.4, Matel's underlying
               infrastructure can now be used within other projects via
               the "matel" library.
               .
               The guidelines for contributing to Matel and for
               submitting bug reports are visible in README.md.
bug-reports:   http://github.com/varikvalefor/matel/issues
license:       BSD-3-Clause
author:        Varik Valefor
maintainer:    varikvalefor@aol.com
copyright:     (c) Varik Valefor 2021.
category:      Chat

source-repository-package
  type: git
  location: https://github.com/varikvalefor/matel.git

library
  ghc-options: -O2 -haddock
  exposed-modules:
    Metal.Auth
    Metal.Space
    Metal.Room
    Metal.Community
    Metal.Base
    Metal.User
    Metal.OftenUsedFunctions
    Metal.MatrixAPI.HighLevel
    Metal.MatrixAPI.LowLevel
    Metal.Messages.Encrypted
    Metal.Messages.Standard
    Metal.Default
    Metal.FavoriteNoise
  other-modules:
    -- The following modules export stuff which is of real use only
    -- within Metal.MatrixAPI.LowLevel.
    Metal.MatrixAPI.LowLevel.Types
    Metal.MatrixAPI.LowLevel.ResponseToWhatever
    Metal.MatrixAPI.LowLevel.GetRoomInformation
    Metal.MatrixAPI.LowLevel.RecordCombination
    Metal.MatrixAPI.LowLevel.FetchEvents
    -- The following modules export stuff which is re-exported by
    -- Metal.MatrixAPI.HighLevel.  These modules are hidden because the
    -- exposure of these modules would be largely redundant.
    Metal.MatrixAPI.LowLevel.Send.Text
    Metal.MatrixAPI.LowLevel.GenerateAuth
  other-extensions:
    OverloadedStrings
    TemplateHaskell
    DeriveAnyClass
  build-depends:
    base ^>=4.14.1.0,
    bytestring,
    basic-prelude,
    http-conduit,
    aeson,
    string-random,
    async,
    lens-aeson,
    lens,
    text
  hs-source-dirs: src
  default-language: Haskell2010

executable matel
  main-is: matel.hs
  ghc-options: -haddock -threaded -O2 -dynamic
  other-modules:
    TUI,
    Colour,
    GetAuth
  build-depends:
    base ^>=4.14.1.0,
    directory,
    brick,
    matel,
    text,
    vty
  hs-source-dirs: app
  default-language: Haskell2010

executable matelcli
  main-is: matelcli.hs
  ghc-options: -haddock -threaded -O2 -dynamic
  other-modules:
    GetAuth
  build-depends:
    base ^>=4.14.1.0,
    directory,
    matel,
    text
  hs-source-dirs: app
  default-language: Haskell2010
